--- a/registration.html
+++ b/registration.html
@@ -1,65 +1,63 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Registration</title>
-</head>
-<body>
+    <head>
+        <title>Registration</title>
+    </head>
+    <body>
 
-<script>
-function Selected(a) {
-  var label = a.value;
-    if (label=="Open") {
-       document.getElementById("Block1").style.display='block';
-   } 
-}
-</script>
-<script>
-function A(a) {
-  var label = a.value;
-    if (label=="Add") {
-       document.getElementById("Block2").style.display='block';
-   } 
-}
-</script>
-
-
-<form>
-  <fieldset>
-    <legend>Sign Up</legend>
-    Name:<br>
-    <input type="text" name="name" required value="" max="255">
-    <br>
-    Email:<br>
-    <input type="email" name="email" value="" placeholder="example@mail.com" max="255">
-    <br>
-    Phone:<br>
-    <input type="tell" name="phone" value="" min="11" max="13" pattern="[\+]\d{2}[\(]\d{2}[\)]\d{4}[\-]\d{4}">
-    <br>
-    Password:<br>
-    <input type="password" name="password" value="" min="8" max ="15" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" >
-    <br><br>
-    <input type="radio" name="gender" value="male" checked>Male<br>
-    <input type="radio" name="gender" value="female">Female<br>
-    <input type="radio" name="gender" value="Open"  onChange="Selected(this)">Other<br><br>
-   
-    <div id='Block1' style='display: none;'>
-         <select onChange="A(this)" aria-required="true" name=""   size="3">
-         <option value="1">1</option>
-         <option value="2">2</option>
-         <option value="Add">add</option><br>
-         <br>
-         </select>
-    </div>
-    <br>
-    <div id='Block2' style='display: none;'>
-            Your opinion:<br>
-            <input  type="text" placeholder="what do you think" ><br>
-         </div>
-         <br>
+        <script>
+            function selected(a) {
+            var label = a.value;
+            if (label==='Open') {
+                document.getElementById('block-1').style.display='block';
+            }else {
+                document.getElementById('block-1').style.display='none';
+            }
+        }
+            function check(a) {
+            var label = a.value;
+            if (label==='Add') {
+                document.getElementById('block-2').style.display='block';
+            }else {
+                document.getElementById('block-2').style.display='none';
+            }
+        }
+        </script>
+        <form>
+            <fieldset>
+                <legend>Sign Up</legend>
+                Name:<br>
+                <input type="text" name="name" required value="" max="255">
+                <br>
+                Email:<br>
+                <input type="email" name="email" value="" placeholder="example@mail.com" max="255">
+                <br>
+                Phone:<br>
+                <input type="tell" name="phone" value="" min="11" max="13" pattern="[\+]\d{2}[\(]\d{2}[\)]\d{4}[\-]\d{4}">
+                <br>
+                Password:<br>
+                <input type="password" name="password" required value="" min="8" max="15" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+                <br><br>
+                <input type="radio" name="gender" value="male" checked onChange="selected(this)">Male<br>
+                <input type="radio" name="gender" value="female" onChange="selected(this)">Female<br>
+                <input type="radio" name="gender" value="Open" onChange="selected(this)">Other<br><br>
+                <div id="block-1" style="display: none;">
+                    <select onChange="check(this)" aria-required="true" name="" size="3">
+                    <option value="1" onChange="check(this)">1</option>
+                    <option value="2" onChange="check(this)">2</option>
+                    <option value="Add" onChange="check(this)">add</option><br>
+                    </select>
+                </div>
+                <br>
+                <div id="block-2" style="display: none;">
+                    Your opinion:<br>
+                    <textarea placeholder="what do you think" rows="10" cols="30"></textarea><br>
+                </div>
+                <br>
     
-    <input type="submit" value="Submit">
-    <input type="reset" value="Cancel">
-  </fieldset>
-</form>
-
-</body>
+                <input type="submit" value="Submit">
+                <input type="reset" value="Cancel">
+            </fieldset>
+        </form>
+    </body>
 </html> 
