--- a/Homework 2019.04.29/updateHomework.html
+++ b/Homework 2019.04.29/updateHomework.html
@@ -12,13 +12,14 @@
                     - <input type="tel" minlength="2" maxlength="2" placeholder="2 number" pattern="[0-9]{2}" style="height:20px; width:70px;" required>
                     - <input type="tel" maxlength="2" minlength="2" placeholder="2 number" pattern="[0-9]{2}" style="height:20px; width:70px;"required>
                     - <input type="tel" maxlength="2" minlength="2" placeholder="2 number" pattern="[0-9]{2}" style="height:20px; width:70px;" required>
+                    - <input type="tel" maxlength="2" minlength="2" placeholder="2 number" pattern="[0-9]{2}" style="height:20px; width:70px;" required>
                 </p>
                 <p>Name: <input type="text" name="name"  placeholder="name" required> <br></p>
                 <p>Password:  <input type="password" name="pass" value="" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required><br></p>
                 <form action="/action_page.php">
                     <input type="radio" name="gender" value="male" checked> Male<br>
                     <input type="radio" name="gender" value="female"> Female<br>
-                    <input type="radio" name="gender" value="other"> Other<form action="/action_page.php" method="get">
+                    <input type="radio" name="gender" value="other"> Other
 
                         <input list="gender" name="all type of gender">
                         <datalist id="gender">
