-Changed Registration page

--- a/Hunan_Khachatryan/Html/Registration_Form.html
+++ b/Hunan_Khachatryan/Html/Registration_Form.html
@@ -14,7 +14,7 @@
   </td>
   
   <td>
-    <input type="email" placeholder="Email" name="Email" pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}"  required>
+    <input type="email" placeholder="Email" name="Email" pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,}"  required>
   </td>
   </tr>
 
