-Author Anahit homework 30.04 (Resume page)

--- a/Anahit_Karyan_Web/Html_Css/2-30.04/Resume page/index.html
+++ b/Anahit_Karyan_Web/Html_Css/2-30.04/Resume page/index.html
@@ -11,8 +11,8 @@
                 <div class="flex1-1">
                     <h3> RESUME  </h3>
                     <img src="user.png">
-                    <h4> MARTIN DOE </h4>
-                    <h5> Accountant  </h5>
+                    <h2> MARTIN DOE </h2>
+                    <h4> Accountant  </h4>
                     <p> Contact </p>
                     <p> +123 456 789 </p> 
                     <p> jhodeopro@frepik.com </p>
@@ -63,30 +63,29 @@
                     <img src="manager.png" class="inline">
                     <h2 class="inline"> About Me </h2>
                     <p> 
-                     is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                     Lorem Ipsum has been the industry's standard . It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                     </p>
                 </div>
                 <hr>
                 <div class="flex2-2">
                       <img src="suitcase.png"> 
                        <h2 > PROFESSIONAL EXPERIENCE </h2>
-                       <div class="vl"></div>
                        <ul>
                            <li>
                                 <pre> 2014-2015 JOB TITLES
-             COMPANY 
+           COMPANY 
                                 </pre>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
                            </li>
                            <li>
                                 <pre> 2014-2015 JOB TITLES
-             COMPANY
+           COMPANY
                                 </pre>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
                             </li>
                             <li>
                                 <pre> 2014-2015 JOB TITLES
-             INSTITUTION
+           COMPANY
                                 </pre>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p> 
                            </li>
@@ -97,23 +96,22 @@
                 <div class="flex2-3">
                         <img src="mortarboard.png">
                         <h2 > FORMAL EDUCATIN </h2>
-                            <div class="vl"></div>
                        <ul>
                            <li>
                                 <pre> 2007-2010 DEGRREE TITLES
-             INSTITUTION
+           INSTITUTION
                                 </pre>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
                            </li>
                            <li>
                                 <pre> 2004-2007 DEGRREE TITLES
-             INSTITUTION
+           INSTITUTION
                                 </pre>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p>
                             </li>
                             <li>
                                 <pre> 2002-2004 DEGRREE  TITLES
-             INSTITUTION
+            INSTITUTION
                                 </pre>
                                 <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took </p> 
                            </li>
@@ -125,7 +123,7 @@
                 <div class="flex2-4">
                            <img src="trophy.png" >
                            <h2 > AWARDS/CERTIFACATES </h2>
-                           <ul>
+                           <ol>
                                 <li>
                                   - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT.
                                 <li>
@@ -141,7 +139,7 @@
                                 <li>
                                   - LOREM IPSUM DOLOR SIT AMET, CONSECTETUR  ELIT. 
                                 <li>
-                           </ul>
+                           </ol>
                 </div>
 
             </div>
