--- a/Tigran_Nalbandyan/HTML/resume.html
+++ b/Tigran_Nalbandyan/HTML/resume.html
@@ -87,26 +87,26 @@
             </div>
             <!-------------------------------------------- RIGHT PART ------------------------------------------------->
             <div id="block-right">
-                <div class="right_part" style="display: inline-block; width: 100%">
-                    <div style="border-block-end: 1px solid #bdbcc1; padding-block-end: 20px;">
+                <div class="right_part-divs">
+                    <div id="first-right-div">
                         <h3 class="header-about">
-                        <i class="fa fa-user" style="color: #4c9793; font-size: 20px"></i>
+                        <i class="fa fa-user right-icons"></i>
                         About Me
                         </h3>
-                        <div class="text" style="margin-left: 10px; margin-left: 18px;"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus, animi quo blanditiis, ipsum provident consectetur facilis accusantium voluptatum perspiciatis aliquid.</p>
+                        <p class="text" id="first-right-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus, animi quo blanditiis, ipsum provident consectetur facilis accusantium voluptatum perspiciatis aliquid.</p>
                     </div>
                 </div>
                 <div>
                     <h3 class="header-about">
-                    <i class="fa fa-suitcase" style="color: #4c9793"></i>
+                    <i class="fa fa-suitcase right-icons"></i>
                     PROFESSIONAL EXPERIENCE
                     </h3>
-                    <div>
-                        <ul class="left-bordered">
+                    <div class="right_part-divs left-bordered">
+                        <ul class="right-list">
                             <li>
                                 <table>
                                     <tr>
-                                        <th style="width: 15%">2014 - 2015</th>
+                                        <th class="list-head">2014 - 2015</th>
                                         <th>JOB TITLES</th>
                                     </tr>
                                     <tr>
@@ -115,14 +115,14 @@
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <th class="text" style="font-weight: inherit"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
+                                        <th class="text list-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
                                     </tr>
                                 </table>
                             </li>
                             <li>
                                 <table>
                                     <tr>
-                                        <th style="width: 15%">2014 - 2015</th>
+                                        <th class="list-head">2014 - 2015</th>
                                         <th>JOB TITLES</th>
                                     </tr>
                                     <tr>
@@ -131,14 +131,14 @@
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <th class="text" style="font-weight: inherit"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
+                                        <th class="text list-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
                                     </tr>
                                 </table>
                             </li>
                             <li>
                                 <table>
                                     <tr>
-                                        <th style="width: 15%">2014 - 2015</th>
+                                        <th class="list-head">2014 - 2015</th>
                                         <th>JOB TITLES</th>
                                     </tr>
                                     <tr>
@@ -147,27 +147,27 @@
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <th class="text" style="font-weight: inherit"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
+                                        <th class="text list-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
                                     </tr>
                                 </table>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="divider">
+                <div class="end-bordered">
                     <p> </p>
                 </div>
-                <div>
+                <div class="right_part-divs">
                     <h3 class="header-about">
-                    <i class="fa fa-graduation-cap" style="color: #4c9793"></i>
+                    <i class="fa fa-graduation-cap right-icons"></i>
                     FORMAL EDUCATION
                     </h3>
-                    <div>
-                        <ul class="left-bordered">
+                    <div class="left-bordered">
+                        <ul class="right-list">
                             <li>
                                 <table>
                                     <tr>
-                                        <th style="width: 15%">2007 - 2010</th>
+                                        <th class="list-head">2007 - 2010</th>
                                         <th>DEGREE TITLES</th>
                                     </tr>
                                     <tr>
@@ -176,14 +176,14 @@
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <th class="text" style="font-weight: inherit"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
+                                        <th class="text list-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
                                     </tr>
                                 </table>
                             </li>
                             <li>
                                 <table>
                                     <tr>
-                                        <th style="width: 15%">2007 - 2010</th>
+                                        <th class="list-head">2007 - 2010</th>
                                         <th>DEGREE TITLES</th>
                                     </tr>
                                     <tr>
@@ -192,14 +192,14 @@
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <th class="text" style="font-weight: inherit"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
+                                        <th class="text list-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
                                     </tr>
                                 </table>
                             </li>
                             <li>
                                 <table>
                                     <tr>
-                                        <th style="width: 15%">2007 - 2010</th>
+                                        <th class="list-head">2007 - 2010</th>
                                         <th>DEGREE TITLES</th>
                                     </tr>
                                     <tr>
@@ -208,22 +208,23 @@
                                     </tr>
                                     <tr>
                                         <th></th>
-                                        <th class="text" style="font-weight: inherit"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
+                                        <th class="text list-text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quod? Eum aut excepturi, asperiores atque consequuntur officiis eveniet eius laboriosam veritatis error praesentium facere repellendus.</p></th>
                                     </tr>
                                 </table>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div style="padding-block-end: 20px; border-block-end: 1px solid #bdbcc1">
+                <div class="end-bordered">
                     <p> </p>
                 </div>
-                <div>
+                <div class="right_part-divs">
                     <h3 class="header-about">
-                    <i class="fa fa-trophy" style="color: #4c9793"></i>
+                    <i class="fa fa-trophy right-icons"></i>
                     AWARDS/CERTIFICATES
                     </h3>
                     <ul style="margin: 0px; list-style: square inside url('data:image/gif;base64,R0lGODlhBQAKAIABAAAAAP///yH5BAEAAAEALAAAAAAFAAoAAAIIjI+ZwKwPUQEAOw==">
+                        <li class="text">LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT</li>
                         <li class="text">LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT</li>
                         <li class="text">LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT</li>
                         <li class="text">LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT</li>
